Working on why the xx and yy functions are not working.

--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
                 <label for="description">Description:</label>
                 <input type="text" id="description" name="description" Value="describe the dial you are plotting"><br><br>
                         
-                <h2 id="dialType">Dial Type:</h2>
+                <p id="dialType">Dial Type:</p>
                 <input type="radio" id="verticalDial" name="dialType"  value="v" checked>
                 <label for="verticalDial">Vertical Dial</label><br>
                 <input type="radio" id="horizontalDial" name="dialType" value="h">
